--- a/tibank.conf
+++ b/tibank.conf
@@ -1,14 +1,29 @@
+//	LOG_EMERG	0	/* system is unusable */
+//	LOG_ALERT	1	/* action must be taken immediately */
+//	LOG_CRIT	2	/* critical conditions */
+//	LOG_ERR		3	/* error conditions */
+//	LOG_WARNING	4	/* warning conditions */
+//	LOG_NOTICE	5	/* normal but significant condition */
+//	LOG_INFO	6	/* informational */
+//	LOG_DEBUG	7	/* debug-level messages */
+log_level=6;
+
 // Web Server Setting
-http.listen_addr="0.0.0.0";
-http.listen_port=8899;
-http.doc_root="/var/www/html/";
-http.thread_pool_size=8;
-http.conn_time_out=600; 		// 10min超时
-http.conn_time_linger=10;  	//10s不更新连接时间
+http = {
+listen_addr="0.0.0.0";
+listen_port=8899;
+doc_root="/var/www/html/";
+thread_pool_size=8;
+conn_time_out=600; 		// 10min超时
+conn_time_linger=10;  	//10s不更新连接时间
+};
 
 // MySQL ocnfigration
-mysql.host_addr="127.0.0.1";
-mysql.host_port=3363;
-mysql.username="root";
-mysql.passwd="1234";
-mysql.database="paybank";
+mysql = {
+host_addr="127.0.0.1";
+host_port=3363;
+username="root";
+passwd="1234";
+database="paybank";
+conn_pool_size=30;
+};
