--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ set (EXTRA_LIBS ${EXTRA_LIBS} ssl event config++)
 set (EXTRA_LIBS ${EXTRA_LIBS} pthread hiredis)
 set (EXTRA_LIBS ${EXTRA_LIBS} boost_system boost_thread-mt boost_date_time boost_regex)
 set (EXTRA_LIBS ${EXTRA_LIBS} mysqlcppconn)
-set (EXTRA_LIBS ${EXTRA_LIBS} commonutil json )
+set (EXTRA_LIBS ${EXTRA_LIBS} commonutil json curl )
 
 target_link_libraries( tibank ${EXTRA_LIBS} )
 
