--- a/include/config.h.in
+++ b/include/config.h.in
@@ -1,7 +1,7 @@
 #ifndef _CONFIG_H_
 #define _CONFIG_H_
 
-#define tibank_VERSION_MAJOR @NETASK_VERSION_MAJOR@
-#define tibank_VERSION_MINOR @NETASK_VERSION_MINOR@
+#define tibank_VERSION_MAJOR @TIBANK_VERSION_MAJOR@
+#define tibank_VERSION_MINOR @TIBANK_VERSION_MINOR@
 
 #endif // _CONFIG_H_
