启动展示软件版本号和提交信息 增加了连接池剔除长时间不用连接的功能 强化了CMakefile的编译警告

--- a/include/config.h.in
+++ b/include/config.h.in
@@ -3,5 +3,6 @@
 
 #define tibank_VERSION_MAJOR @TIBANK_VERSION_MAJOR@
 #define tibank_VERSION_MINOR @TIBANK_VERSION_MINOR@
+#define tibank_VERSION_PATCH @TIBANK_VERSION_PATCH@
 
 #endif // _CONFIG_H_
