优化会话超时管理机制 增加会话ops_cancel机制 HttpConf配置管理

--- a/tibank.conf
+++ b/tibank.conf
@@ -6,16 +6,18 @@
 //	LOG_NOTICE	5	/* normal but significant condition */
 //	LOG_INFO	6	/* informational */
 //	LOG_DEBUG	7	/* debug-level messages */
-log_level=6;
+log_level=7;
 
 // Web Server Setting
 http = {
 listen_addr="0.0.0.0";
 listen_port=8899;
-doc_root="/var/www/html/";
-thread_pool_size=8;
-conn_time_out=600; 		// 10min超时
-conn_time_linger=10;  	//10s不更新连接时间
+docu_root="/var/www/html/";
+docu_index="index.html;index.htm;index";
+thread_pool_size=3;
+conn_time_out=120;          // 2min超时
+conn_time_out_linger=10;    // 10s不更新连接时间
+ops_cancel_time_out=20;     // 会话操作20s
 };
 
 // MySQL ocnfigration
@@ -26,4 +28,12 @@ username="root";
 passwd="1234";
 database="paybank";
 conn_pool_size=30;
+};
+
+// Redis configuration
+redis = {
+host_addr="127.0.0.1";
+host_port=6379;
+passwd="";
+conn_pool_size=10;
 };
