--- a/tibank.conf
+++ b/tibank.conf
@@ -12,12 +12,18 @@ log_level=7;
 http = {
 listen_addr="0.0.0.0";
 listen_port=8899;
+
 docu_root="/var/www/html/";
 docu_index="index.html;index.htm;index";
+
+// 工作线程组数目
 thread_pool_size=3;
-conn_time_out=120;          // 2min超时
-conn_time_out_linger=10;    // 10s不更新连接时间
-ops_cancel_time_out=20;     // 会话操作20s
+// 一个连接如果超过这个时长就主动删除，sec
+conn_time_out=120;
+// 不频繁更新连接的时间戳，sec
+conn_time_out_linger=5;
+// 异步操作超时时间，使用会影响性能
+ops_cancel_time_out=20;  
 };
 
 // MySQL ocnfigration
