增加HTTP的流控和开关支持 修复Accept异常导致程序挂起 代码整理

--- a/tibank.conf
+++ b/tibank.conf
@@ -22,8 +22,12 @@ thread_pool_size=3;
 conn_time_out=120;
 // 不频繁更新连接的时间戳，sec
 conn_time_out_linger=5;
-// 异步操作超时时间，使用会影响性能
+// 异步操作超时时间，使用会影响性能(大概20%左右)
 ops_cancel_time_out=20;  
+
+// 流控相关
+service_enable=true;  // 是否允许服务
+service_speed=0;   // 每5sec允许服务的数目，0表示不限制
 };
 
 // MySQL ocnfigration
@@ -42,4 +46,13 @@ host_addr="127.0.0.1";
 host_port=6379;
 passwd="";
 conn_pool_size=10;
+};
+
+// RabbitMQ configuration
+rabbitmq = {
+connect_urls="amqp://tibank:%s@127.0.0.1:5672/tibank;";
+password="tibank";
+exchange="tibank";
+route_key="mqpooltest";
+queue="mqtest";
 };
